src/test/java/com/syntaxerror/seminario/SeminarioApplicationTests.java
package com.syntaxerror.seminario;

import org.junit.jupiter.api.Test;
import org.springframework.boot.test.context.SpringBootTest;

@SpringBootTest
class SeminarioApplicationTests {

    @Test
    void contextLoads() {
    }

}
